Resolves: tdf#152619 crash inspecting uninserted XFieldMaster

Change-Id: I765dd5d7e1ed2c1749841491a50216a6afe903c1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150351
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 5464a1dad69c52d011b194baf7d543ce8dd27748)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150321
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>